<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易天通讯</string>
    <string name="tianqi_1">辽宁省</string>
    <string name="tianqi_2">鞍山市</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="webView_button1">上一页</string>
    <string name="webView_button2">下一页</string>
    <string name="Payment_calls1">请选择运营商</string>
    <string name="Payment_calls2">短信内容</string>
    <string name="Payment_calls3">发送至</string>
    <string name="Payment_calls4">点击发送短信</string>
    <string name="client_no_update_ok">确定</string>
    <string name="Payment_name1">中国移动</string>
    <string name="Payment_name2">中国联通</string>
    <string name="Payment_name3">中国电信</string>
    <string name="Payment_Options1">话费查询</string>
    <string name="Payment_Options2">流量查询</string>
    <string name="Payment_Options3">缴费</string>
    <string name="Enterprise_name1">企业简介</string>
    <string name="Enterprise_name2">企业文化</string>
    <string name="Enterprise_name3">企业荣誉</string>
    <string name="Product_name1">综合介绍</string>
    <string name="Product_name2">产品参数</string>
    <string name="Product_name3">售后服务</string>
    <string name="Payment_phone1">10086</string>
    <string name="Payment_phone2">10010</string>
    <string name="Payment_phone3">10001</string>
    <string name="Product_sum">全部</string>
    <string name="Product_ranking">热销</string>
    <string name="Product_brand">品牌</string>
    <string name="Product_search">搜索您感兴趣的商品</string>
    <string name="Payment_phone_value1">YE</string>
    <string name="Payment_phone_value2">102</string>
    <string name="Payment_flow_value1">CXGPRS</string>
    <string name="Payment_flow_value2">CXLL</string>
    <string name="Payment_flow_value3">108</string>
    <string name="Home_string_button1">在线商城</string>
    <string name="Home_string_button2">应用下载</string>
    <string name="Home_string_button3">企业信息</string>
    <string name="Home_string_button4">促销活动</string>
    <string name="Home_string_button5">产品中心</string>
    <string name="Home_string_button6">售后服务</string>
    <string name="Home_string_button7">账单缴费</string>
    <string name="Home_string_button8">便民服务</string>
    <string name="Home_string_button9">联系我们</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="tianqi_3">穿衣指数</string>
    <string name="tianqi_4">旅游指数</string>
    <string name="tianqi_5">洗车指数</string>
    <string name="tianqi_6">紫外线指数</string>
    <string name="tianqi_7">舒适度指数</string>
    <string name="tianqi_8">过敏指数</string>
    <string name="payment_1">您目前选择的是</string>
    <string name="payment_2">的查询业务，</string>
    <string name="payment_3">如您在查询中遇到任何问题，请拨打：</string>
    <string name="Payment_phone4">10000</string>
    <string name="kaifa">正在开发中。。。</string>
    <string name="Intent">当前无网络，请检查网络状况</string>
    <string name="title_activity_search_product">SearchProductActivity</string>

</resources>
