<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@android:color/white"
    android:orientation="vertical">
	<RelativeLayout 
        android:id="@+id/Payment_TOP"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_bg">
        
	    
       <Button
            android:id="@+id/Payment_Button_back"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/back_an"
            />
       
       
         <TextView
        android:id="@+id/Payment_TextView_tabBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="20dip" />
    </RelativeLayout>
    
    <LinearLayout  
       android:layout_width="fill_parent"  
       android:layout_height="40.0dip"  
       android:background="#FFFFFF" >  
  
       <TextView  
           android:id="@+id/Payment_text1"  
           android:layout_width="fill_parent"  
           android:layout_height="fill_parent"  
           android:layout_weight="1.0"  
           android:gravity="center"  
           android:text="@string/Payment_Options1"  
           android:textColor="@android:color/white"  
           android:textSize="17.0dip" 
           android:background="#005ca1" />  
  
       <TextView  
           android:id="@+id/Payment_text2"  
           android:layout_width="fill_parent"  
           android:layout_height="fill_parent"  
           android:layout_weight="1.0"  
           android:gravity="center"  
           android:text="@string/Payment_Options2"  
           android:textColor="#005ca1"  
           android:textSize="17.0dip" />  
  
       <TextView  
           android:id="@+id/Payment_text3"  
           android:layout_width="fill_parent"  
           android:layout_height="fill_parent"  
           android:layout_weight="1.0"  
           android:gravity="center"  
           android:text="@string/Payment_Options3"  
           android:textColor="#005ca1"  
           android:textSize="17.0dip" />  
   </LinearLayout>
   <LinearLayout  
       android:layout_width="fill_parent"  
       android:layout_height="2dp"  
       android:background="#005ca1" >  
  
   </LinearLayout>
       
	<android.support.v4.view.ViewPager
	        android:id="@+id/Payment_guidePages"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
</LinearLayout>
